--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-</!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="UTF-8">
@@ -8,6 +8,7 @@
 	<meta name = "author" content = "Elaine Mary Rose">
 	
 	<title> Memory Game </title>
+	<link rel = "icon" href = "icon.png">
 
 	<script>
 		
