--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name = "description" content = "Weather App">  
   <meta name = "keyword" content = "Memory Game, easy javascript games"> 
   <meta name = "author" content = "Elaine Mary Rose">
-  
+
   <title> Test Your Memory | Home</title>
 
   <link href="https://fonts.googleapis.com/css?family=Mouse+Memoirs" rel="stylesheet">
@@ -22,7 +22,7 @@
 
     <span id = "red">T</span>E<span id = "orange">S</span><span id="blue">T </span><span id = "green">Y</span>O<span id="yellow">U</span><span id = "red">R</span><span id ="orange"> M</span>E<span id = "green">M</span><span id = "yellow">O</span><span id = "blue">R</span>Y<span id = "red">!</span>
     <div class ="image">
-      <img src = "memory.png">
+      <a href = "memory.html"><img src = "memo.png"></a>
     </div>
   </div>
 
