--- a/memory.html
+++ b/memory.html
@@ -56,7 +56,7 @@
 
 			counter--;
 			document.getElementById('moves').innerHTML = counter;
-			if(counter == 0){
+			if(counter < 0){
 
 				alert("You're out of moves! Click to play again! Score : 0");
 				document.getElementById('board').innerHTML = "";
