--- a/instructions.html
+++ b/instructions.html
@@ -17,11 +17,11 @@
     
     	$(document).ready(function() {
 
-      		$(".play").fadeIn(200);
+      		$("#italy").fadeIn(200);
       		for( var i = 0; i<500; ++i){
 
-       		 	$(".play").fadeIn(1000);
-       		 	$(".play").fadeOut(1000);
+       		 	$("#italy").fadeIn(700);
+       		 	$("#italy").fadeOut(700);
       		}
     	});
 
@@ -43,9 +43,8 @@
 			<span class = "animate"> Welcome User! </span>
 			<p class = "how">  How Do I Win? </p>
 
-			<p class ="secfade"> <span id = "texts"> Match all 12 pairs of tiles according to the given</span> <span id = "italy"> <a href = "ins2.html"> constraints </a></span> <br> <img src = "img1.png"></p>
+			<p class ="secfade"> <span id = "texts"> Match all 12 pairs of tiles according to the given</span> <span id = "italy"> <a href = "constraints.html"> <strong> constraints </strong> </a></span> <br> <img src = "img1.png"></p>
 
-			<p class = "play"><a href = memory.html> Play Now </a></p>
 		</div>
 	<br><br>
 
