--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <span id = "red">T</span>E<span id = "orange">S</span><span id="blue">T </span><span id = "green">Y</span>O<span id="yellow">U</span><span id = "red">R</span><span id ="orange"> M</span>E<span id = "green">M</span><span id = "yellow">O</span><span id = "blue">R</span>Y<span id = "red">!</span>
     <div class ="image">
-      <a href = "memory.html"><img src = "memo.png"></a>
+      <a href = "instructions.html"><img src = "memo.png"></a>
     </div>
   </div>
 
