--- a/instructions.html
+++ b/instructions.html
@@ -43,7 +43,7 @@
 			<span class = "animate"> Welcome User! </span>
 			<p class = "how">  How Do I Win? </p>
 
-			<p class ="secfade"> <span id = "texts"> Match all 12 pairs of tiles according to the given</span> <span id = "italy"> <a href = "constraints.html"> <strong> constraints </strong> </a></span> <br> <img src = "img1.PNG"></p>
+			<p class ="secfade"> <span id = "texts"> Match all 12 pairs of tiles according to the given</span> <span id = "italy"> <a href = "constraints.html"> <strong> constraints </strong> </a></span> <br> <img src = "image.PNG"></p>
 
 		</div>
 	<br><br>
