--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  
   <meta charset="UTF-8">
   <meta name = "viewport" content = "width=device">
-  <meta name = "description" content = "Weather App">  
+  <meta name = "description" content = "Memory Game">  
   <meta name = "keyword" content = "Memory Game, easy javascript games"> 
   <meta name = "author" content = "Elaine Mary Rose">
 
