--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=Mouse+Memoirs" rel="stylesheet">
   
-  <link rel = "icon" href = "icon.png">
-  <link rel = "stylesheet" href = "animation.css">
+  <link rel = "icon" href = "images/icon.png">
+  <link rel = "stylesheet" href = "css/animation.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
 
     <span id = "red">T</span>E<span id = "orange">S</span><span id="blue">T </span><span id = "green">Y</span>O<span id="yellow">U</span><span id = "red">R</span><span id ="orange"> M</span>E<span id = "green">M</span><span id = "yellow">O</span><span id = "blue">R</span>Y<span id = "red">!</span>
     <div class ="image">
-      <a href = "instructions.html"><img src = "memo.png"></a>
+      <a href = "html/instructions.html"><img src = "images/memo.png"></a>
     </div>
   </div>
 
