--- a/html/instructions.html
+++ b/html/instructions.html
@@ -9,7 +9,7 @@
   	<meta name = "author" content = "Elaine Mary Rose">
 
 	<title> Instructions | Test Your Memory</title>
-	<link rel = "icon" href = "icon.png">
+	<link rel = "icon" href = "../images/icon.png">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 
@@ -31,7 +31,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet"> 
-	<link rel = "stylesheet" href = "game.css">
+	<link rel = "stylesheet" href = "../css/game.css">
 
 </head>
 <body>
@@ -43,7 +43,7 @@
 			<span class = "animate"> Welcome User! </span>
 			<p class = "how">  How Do I Win? </p>
 
-			<p class ="secfade"> <span id = "texts"> Match all 12 pairs of tiles according to the given</span> <span id = "italy"> <a href = "constraints.html"> <strong> constraints </strong> </a></span> <br> <img src = "image.PNG"></p>
+			<p class ="secfade"> <span id = "texts"> Match all 12 pairs of tiles according to the given</span> <span id = "italy"> <a href = "constraints.html"> <strong> constraints </strong> </a></span> <br> <img src = "../images/image.PNG"></p>
 
 		</div>
 	<br><br>
