--- a/html/difficult.html
+++ b/html/difficult.html
@@ -15,7 +15,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet"> 
 	<link rel = "stylesheet" href = "../css/game.css">
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/magic.css">
 </head>
 <body>
 
@@ -26,5 +27,6 @@
 		<div id = "move">Moves left : <span> </span><span id = "moves"> </span></div>
 	<div class = "effect" id = "board"></div>
 	<script>newBoard();</script>
+	<script type="text/javascript" src="../js/animate.js"></script>
 </body>
 </html>
